# nosible-mcp

./: .env.example  .gitignore  README.md  auth.py  config.py  main.py  nosible_mcp.py  pyproject.toml  server.py
.github/workflows/: ci.yml
src/: auth.py  config.py  context_keys.py  nosible_mcp.py  server.py
tests/: conftest.py  test_tools.py
