[project]
name = "nosible-mcp"
version = "0.0.5"
description = "MCP server for the NOSIBLE search API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.3",
    "google-cloud>=0.34.0",
    "jwt>=1.4.0",
    "kinde-python-sdk>=2.0.10",
    "mcp[cli]>=1.13.1",
    "nosible>=0.3.2",
]
